header/tblis/frame/base/basic_types.h

typedef std::complex<float> scomplex;
typedef std::complex<double> dcomplex;
typedef _Complex float scomplex;
typedef _Complex double dcomplex;
TBLIS_BEGIN_NAMESPACE

typedef void tblis_config;
typedef enum
{
    REDUCE_SUM      = 0,
    REDUCE_SUM_ABS  = 1,
    REDUCE_MAX      = 2,
    REDUCE_MAX_ABS  = 3,
    REDUCE_MIN      = 4,
    REDUCE_MIN_ABS  = 5,
    REDUCE_NORM_1   = REDUCE_SUM_ABS,
    REDUCE_NORM_2   = 6,
    REDUCE_NORM_INF = REDUCE_MAX_ABS
} reduce_t;
/*
 * Note: these are hard-coded from blis.h to avoid bringing
 * in the whole header as a dependency.
 */
typedef int type_t;
typedef TBLIS_LEN_TYPE len_type;
typedef TBLIS_STRIDE_TYPE stride_type;
typedef TBLIS_LABEL_TYPE label_type;
    template <typename T> constexpr static auto is_complex_v = is_complex<T>::value;
typedef struct tblis_scalar
{
    union scalar
    {
        float s;
        double d;
        scomplex c;
        dcomplex z;

#if TBLIS_ENABLE_CPLUSPLUS
        scalar() : z(0.0, 0.0) {}
#endif
    } data;
    type_t type;

#if TBLIS_ENABLE_CPLUSPLUS

    /*
    tblis_scalar()
    : type(TYPE_DOUBLE)
    {
        data.d = 1.0;
    }
    */

    tblis_scalar(const tblis_scalar& other)
    : type(other.type)
    {
        memcpy(&data, &other.data, sizeof(data));
    }

    template <typename T>
    tblis_scalar(T value)
    : type(type_tag<T>::value)
    {
        *this = value;
    }

    template <typename T>
    tblis_scalar(T value, type_t type)
    : type(type)
    {
        *this = value;
    }

    template <typename T>
    T& get();

    template <typename T>
    const T& get() const
    {
        return const_cast<tblis_scalar&>(*this).get<T>();
    }

    template <typename T>
    T as() const
    {
        if constexpr (is_complex_v<T>)
        {
            switch (type)
            {
                case TYPE_FLOAT:    return T(data.s); break;
                case TYPE_DOUBLE:   return T(data.d); break;
                case TYPE_SCOMPLEX: return T(data.c); break;
                case TYPE_DCOMPLEX: return T(data.z); break;
                default: break;
            }
        }
        else
        {
            switch (type)
            {
                case TYPE_FLOAT:    return T(data.s); break;
                case TYPE_DOUBLE:   return T(data.d); break;
                case TYPE_SCOMPLEX: return T(data.c.real()); break;
                case TYPE_DCOMPLEX: return T(data.z.real()); break;
                default: break;
            }
        }

        return T{};
    }

    void reset(const tblis_scalar& other)
    {
        type = other.type;
        memcpy(&data, &other.data, sizeof(data));
    }

    template <typename T>
    void reset(T value, type_t type = type_tag<T>::value)
    {
        this->type = type;
        *this = value;
    }

    tblis_scalar& operator=(const tblis_scalar& other)
    {
        switch (type)
        {
            case TYPE_FLOAT:
                switch (other.type)
                {
                    case TYPE_FLOAT:    data.s = float(          other.data.s ); break;
                    case TYPE_DOUBLE:   data.s = float(          other.data.d ); break;
                    case TYPE_SCOMPLEX: data.s = float(std::real(other.data.c)); break;
                    case TYPE_DCOMPLEX: data.s = float(std::real(other.data.z)); break;
                    default: break;
                }
                break;
            case TYPE_DOUBLE:
                switch (other.type)
                {
                    case TYPE_FLOAT:    data.d = double(          other.data.s ); break;
                    case TYPE_DOUBLE:   data.d = double(          other.data.d ); break;
                    case TYPE_SCOMPLEX: data.d = double(std::real(other.data.c)); break;
                    case TYPE_DCOMPLEX: data.d = double(std::real(other.data.z)); break;
                    default: break;
                }
                break;
            case TYPE_SCOMPLEX:
                switch (other.type)
                {
                    case TYPE_FLOAT:    data.c = scomplex(other.data.s); break;
                    case TYPE_DOUBLE:   data.c = scomplex(other.data.d); break;
                    case TYPE_SCOMPLEX: data.c = scomplex(other.data.c); break;
                    case TYPE_DCOMPLEX: data.c = scomplex(other.data.z); break;
                    default: break;
                }
                break;
            case TYPE_DCOMPLEX:
                switch (other.type)
                {
                    case TYPE_FLOAT:    data.z = dcomplex(other.data.s); break;
                    case TYPE_DOUBLE:   data.z = dcomplex(other.data.d); break;
                    case TYPE_SCOMPLEX: data.z = dcomplex(other.data.c); break;
                    case TYPE_DCOMPLEX: data.z = dcomplex(other.data.z); break;
                    default: break;
                }
                break;
            default:
                break;
        }

        return *this;
    }

    tblis_scalar convert(type_t new_type) const
    {
        tblis_scalar ret(0, new_type);
        ret = *this;
        return ret;
    }

    const char* raw() const { return reinterpret_cast<const char*>(&data); }

    char* raw() { return reinterpret_cast<char*>(&data); }

    void to(char* buf) const
    {
        memcpy(buf, raw(), type_size[type]);
    }

    void from(const char* buf)
    {
        memcpy(raw(), buf, type_size[type]);
    }

    template <typename T>
    tblis_scalar& operator=(T value)
    {
        switch (type)
        {
            case TYPE_FLOAT:    data.s = float   (std::real(value)); break;
            case TYPE_DOUBLE:   data.d = double  (std::real(value)); break;
            case TYPE_SCOMPLEX: data.c = scomplex(          value ); break;
            case TYPE_DCOMPLEX: data.z = dcomplex(          value ); break;
            default: break;
        }

        return *this;
    }

    bool is_zero() const
    {
        switch (type)
        {
            case TYPE_FLOAT:    return data.s == 0.0f;
            case TYPE_DOUBLE:   return data.d == 0.0;
            case TYPE_SCOMPLEX: return data.c == 0.0f;
            case TYPE_DCOMPLEX: return data.z == 0.0;
            default: break;
        }

        return false;
    }

    bool is_negative() const
    {
        switch (type)
        {
            case TYPE_FLOAT:    return data.s < 0.0f;
            case TYPE_DOUBLE:   return data.d < 0.0;
            case TYPE_SCOMPLEX: return data.c.real() < 0.0f ||
                (data.c.real() == 0.0f && data.c.imag() < 0.0f);
            case TYPE_DCOMPLEX: return data.z.real() < 0.0 ||
                (data.z.real() == 0.0 && data.z.imag() < 0.0);
            default: break;
        }

        return false;
    }

    bool is_one() const
    {
        switch (type)
        {
            case TYPE_FLOAT:    return data.s == 1.0f;
            case TYPE_DOUBLE:   return data.d == 1.0;
            case TYPE_SCOMPLEX: return data.c == 1.0f;
            case TYPE_DCOMPLEX: return data.z == 1.0;
            default: break;
        }

        return false;
    }

    bool is_complex() const
    {
        switch (type)
        {
            case TYPE_FLOAT:    return false;
            case TYPE_DOUBLE:   return false;
            case TYPE_SCOMPLEX: return true;
            case TYPE_DCOMPLEX: return true;
            default: break;
        }

        return false;
    }

    tblis_scalar& operator+=(const tblis_scalar& other)
    {
        TBLIS_ASSERT(type == other.type);

        switch (type)
        {
            case TYPE_FLOAT:    data.s += other.data.s; break;
            case TYPE_DOUBLE:   data.d += other.data.d; break;
            case TYPE_SCOMPLEX: data.c += other.data.c; break;
            case TYPE_DCOMPLEX: data.z += other.data.z; break;
            default: break;
        }

        return *this;
    }

    tblis_scalar& operator-=(const tblis_scalar& other)
    {
        TBLIS_ASSERT(type == other.type);

        switch (type)
        {
            case TYPE_FLOAT:    data.s -= other.data.s; break;
            case TYPE_DOUBLE:   data.d -= other.data.d; break;
            case TYPE_SCOMPLEX: data.c -= other.data.c; break;
            case TYPE_DCOMPLEX: data.z -= other.data.z; break;
            default: break;
        }

        return *this;
    }

    tblis_scalar& operator*=(const tblis_scalar& other)
    {
        TBLIS_ASSERT(type == other.type);

        switch (type)
        {
            case TYPE_FLOAT:    data.s *= other.data.s; break;
            case TYPE_DOUBLE:   data.d *= other.data.d; break;
            case TYPE_SCOMPLEX: data.c *= other.data.c; break;
            case TYPE_DCOMPLEX: data.z *= other.data.z; break;
            default: break;
        }

        return *this;
    }

    tblis_scalar& operator/=(const tblis_scalar& other)
    {
        TBLIS_ASSERT(type == other.type);

        switch (type)
        {
            case TYPE_FLOAT:    data.s /= other.data.s; break;
            case TYPE_DOUBLE:   data.d /= other.data.d; break;
            case TYPE_SCOMPLEX: data.c /= other.data.c; break;
            case TYPE_DCOMPLEX: data.z /= other.data.z; break;
            default: break;
        }

        return *this;
    }

    tblis_scalar operator+(const tblis_scalar& other) const
    {
        tblis_scalar ret(*this);
        ret += other;
        return ret;
    }

    tblis_scalar operator-(const tblis_scalar& other) const
    {
        tblis_scalar ret(*this);
        ret -= other;
        return ret;
    }

    tblis_scalar operator*(const tblis_scalar& other) const
    {
        tblis_scalar ret(*this);
        ret *= other;
        return ret;
    }

    tblis_scalar operator/(const tblis_scalar& other) const
    {
        tblis_scalar ret(*this);
        ret /= other;
        return ret;
    }

    tblis_scalar& conj()
    {
        switch (type)
        {
            case TYPE_FLOAT:    break;
            case TYPE_DOUBLE:   break;
            case TYPE_SCOMPLEX: data.c = std::conj(data.c); break;
            case TYPE_DCOMPLEX: data.z = std::conj(data.z); break;
            default: break;
        }

        return *this;
    }

    friend tblis_scalar conj(const tblis_scalar& other)
    {
        tblis_scalar ret(other);
        ret.conj();
        return other;
    }

    tblis_scalar& abs()
    {
        switch (type)
        {
            case TYPE_FLOAT:    data.s = std::abs(data.s); break;
            case TYPE_DOUBLE:   data.d = std::abs(data.d); break;
            case TYPE_SCOMPLEX: data.c = std::abs(data.c); break;
            case TYPE_DCOMPLEX: data.z = std::abs(data.z); break;
            default: break;
        }

        return *this;
    }

    friend tblis_scalar abs(const tblis_scalar& other)
    {
        tblis_scalar ret(other);
        ret.abs();
        return other;
    }

    tblis_scalar& sqrt()
    {
        switch (type)
        {
            case TYPE_FLOAT:    data.s = std::sqrt(data.s); break;
            case TYPE_DOUBLE:   data.d = std::sqrt(data.d); break;
            case TYPE_SCOMPLEX: data.c = std::sqrt(data.c); break;
            case TYPE_DCOMPLEX: data.z = std::sqrt(data.z); break;
            default: break;
        }

        return *this;
    }

    friend tblis_scalar sqrt(const tblis_scalar& other)
    {
        tblis_scalar ret(other);
        ret.sqrt();
        return other;
    }

    friend std::ostream& operator<<(std::ostream& os, const tblis_scalar& x)
    {
        switch (x.type)
        {
            case TYPE_FLOAT:    os << x.data.s; break;
            case TYPE_DOUBLE:   os << x.data.d; break;
            case TYPE_SCOMPLEX: os << '(' << x.data.c.real() << ',' << x.data.c.imag() << ')'; break;
            case TYPE_DCOMPLEX: os << '(' << x.data.z.real() << ',' << x.data.z.imag() << ')'; break;
            default: break;
        }

        return os;
    }

#endif //TBLIS_ENABLE_CPLUSPLUS

} tblis_scalar;
TBLIS_EXPORT void tblis_init_scalar_s(tblis_scalar* s, float value);
TBLIS_EXPORT void tblis_init_scalar_d(tblis_scalar* s, double value);
TBLIS_EXPORT void tblis_init_scalar_c(tblis_scalar* s, scomplex value);
TBLIS_EXPORT void tblis_init_scalar_z(tblis_scalar* s, dcomplex value);
typedef struct tblis_tensor
{
    type_t type;
    int conj;
    tblis_scalar scalar;
    void* data;
    int ndim;
    len_type* len;
    stride_type* stride;

#if TBLIS_ENABLE_CPLUSPLUS

    tblis_tensor()
    : type(TYPE_DOUBLE), conj(false), scalar(1.0), data(nullptr),
      ndim(0), len(nullptr), stride(nullptr) {}

    template <typename T>
    tblis_tensor(const T* A, int ndim,
                 const len_type* len, const stride_type* stride)
    : type(type_tag<T>::value), conj(false), scalar(T(1)),
      data(const_cast<T*>(A)), ndim(ndim), len(const_cast<len_type*>(len)),
      stride(const_cast<stride_type*>(stride)) {}

    template <typename T>
    tblis_tensor(T alpha, const T* A, int ndim,
                 const len_type* len, const stride_type* stride)
    : type(type_tag<T>::value), conj(false), scalar(alpha),
      data(const_cast<T*>(A)), ndim(ndim), len(const_cast<len_type*>(len)),
      stride(const_cast<stride_type*>(stride)) {}

    template <typename T>
    tblis_tensor(T alpha, bool conj, const T* A, int ndim,
                 const len_type* len, const stride_type* stride)
    : type(type_tag<T>::value), conj(conj), scalar(alpha),
      data(const_cast<T*>(A)), ndim(ndim), len(const_cast<len_type*>(len)),
      stride(const_cast<stride_type*>(stride)) {}

#endif //TBLIS_ENABLE_CPLUSPLUS

} tblis_tensor;
TBLIS_EXPORT void tblis_init_tensor_scaled_s(tblis_tensor* t, float scalar,
                                             int ndim, len_type* len, float* data,
                                             stride_type* stride);
TBLIS_EXPORT void tblis_init_tensor_scaled_d(tblis_tensor* t, double scalar,
                                             int ndim, len_type* len, double* data,
                                             stride_type* stride);
TBLIS_EXPORT void tblis_init_tensor_scaled_c(tblis_tensor* t, scomplex scalar,
                                             int ndim, len_type* len, scomplex* data,
                                             stride_type* stride);
TBLIS_EXPORT void tblis_init_tensor_scaled_z(tblis_tensor* t, dcomplex scalar,
                                             int ndim, len_type* len, dcomplex* data,
                                             stride_type* stride);
TBLIS_EXPORT void tblis_init_tensor_s(tblis_tensor* t,
                                      int ndim, len_type* len, float* data,
                                      stride_type* stride);
TBLIS_EXPORT void tblis_init_tensor_d(tblis_tensor* t,
                                      int ndim, len_type* len, double* data,
                                      stride_type* stride);
TBLIS_EXPORT void tblis_init_tensor_c(tblis_tensor* t,
                                      int ndim, len_type* len, scomplex* data,
                                      stride_type* stride);
TBLIS_EXPORT void tblis_init_tensor_z(tblis_tensor* t,
                                      int ndim, len_type* len, dcomplex* data,
                                      stride_type* stride);
using scalar = tblis_scalar;
inline label_vector idx(const tblis_tensor& A, label_vector&& = label_vector())
{
    return MArray::range(A.ndim);
}
label_vector idx(const std::string& from, label_vector&& to = label_vector());