header/tblis/frame/base/thread.h

typedef tci_comm tblis_comm;
extern const tblis_comm* const tblis_single;
TBLIS_EXPORT
unsigned tblis_get_num_threads();
TBLIS_EXPORT
void tblis_set_num_threads(unsigned num_threads);